feat(agent): Agent 工具死循环防护
- 增加重复调用检测：相同参数连续 >=3 次拦截；滑动窗口(8次)内同工具 >=5 次软告警
- 增加连续同工具失败 >=4 次熔断告警
- 增加总耗时预算（默认 5min，硬上限 30min）
- 防护同时覆盖 executeToolCallback 与 HarnessToolCallback 两条路径
- guardToolLoop* 加 synchronized 防 harness 并行调用并发问题
- 新增配置项 maxExecutionTimeMs/toolLoopRepeatThreshold/toolLoopWindowThreshold/toolFailureThreshold